# arm_pi5_ROSjazzy_ubuntu24.04

./: README.md
ros2_ws/: Readme.md
ros2_ws/scripts/: build.sh  run_nav.sh  run_slam.sh  run_teleop.sh  save_map.sh  start_robot.sh
ros2_ws/src/amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/launch/: description.launch.py
ros2_ws/src/amr_description/urdf/: amr.urdf
ros2_ws/src/amr_fake_odom/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_fake_odom/amr_fake_odom/: fake_odom_node.py
ros2_ws/src/arm_slam/: CMakeLists.txt  package.xml
ros2_ws/src/arm_slam/config/: slam.yaml
ros2_ws/src/my_robot_base_driver/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_base_driver/include/my_robot_base_driver/: base_driver_node.hpp
ros2_ws/src/my_robot_base_driver/src/: base_driver_node.cpp
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/config/: nav2.yaml  slam_toolbox.yaml
ros2_ws/src/my_robot_bringup/launch/: bringup.launch.py  nav.launch.py  slam.launch.py
