<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>amr_description</exec_depend>
  <exec_depend>my_robot_base_driver</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>